# homebruh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  add_package.rb  deploy.sh  main.scm  packages.json  update_arkscript.rb
.github/workflows/: build.yml  rust.yml
community/: packages.list  rdfm.toml  wng.toml
src/: init.rs  lib.rs  main.rs  map.rs  packages.rs  sources.rs  utils.rs
src/entities/: entity.rs
src/manager/: install.rs  mod.rs  sync.rs  update.rs
src/maps/: map.rs  mod.rs  printmap.rs
src/packager/: builder.rs  installer.rs  mod.rs  unbuilder.rs  uninstaller.rs
src/utils/: init.rs  mod.rs  package.rs
wng/: bruh.toml
