[package]
name = "yarpm"
version = "0.1.3"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
description = "Yet another rusty package manager"
readme = "README.md"
repository = "https://github.com/wafelack/yarpm"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking"]}
clap = "2.3.33"
serde_json = "1.0"
dirs = "3.0.1"