[package]
name = "bruh"
version = "0.1.0"
authors = ["Wafelack <wafelack@protonmail.com>"]
edition = "2018"
description = "Homebruh is package manager for GNU/Linux"
repository = "https://github.com/wafelack/homebruh"
readme = "README.md"
license = "GPL-3.0"
keywords = ["package-manager", "Homebruh", "bruh", "linux"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
flate2 = "1.0.20"
tar = "0.4.32"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.9.3"
